<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item

        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_ic"
        android:title="@string/bottom_nav_title_home" />

    <item
        android:id="@+id/navigation_payment"
        android:icon="@drawable/ic_payment_ic"
        android:title="@string/bottom_nav_title_payment" />

    <!--    <item-->
    <!--        android:id="@+id/bottom_navigation_pickup"-->
    <!--        android:title="@string/bottom_nav_title_pickup" />-->

    <!--    <item-->
    <!--        android:id="@+id/bottom_navigation_inventory"-->
    <!--        android:icon="@drawable/ic_inventory_ic"-->
    <!--        android:title="@string/bottom_nav_title_inventory" />-->

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_userprofile"
        android:title="@string/bottom_nav_title_account" />
</menu>