<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_alertDialog"
        style="@style/CardViewRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/canel_icon_dialog"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="right"
                android:src="@drawable/ic_close" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/reuest_dialog_heading"
                android:fontFamily="@font/poppins_bold"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textColor="@color/color_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reuest_dialog_des"
                android:fontFamily="@font/poppins_regular"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/country_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:weightSum="2">
                <TextView
                    android:id="@+id/dialog_continue"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:padding="15dp"
                    android:layout_marginStart="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_round"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:text="@string/change_new_date"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/dialog_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:background="@null"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:layout_marginEnd="6dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/contact_us"
                    android:textColor="@color/primary_color"
                    android:textSize="15sp" />



            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>