<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_alertDialog"
        style="@style/CardViewRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/canel_icon_dialog"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="right"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_close" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/why_cancel"
                android:textColor="@color/color_gray"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/select_reason"
                android:textColor="@color/textcolorgray"
                android:textSize="12sp" />

            <FrameLayout
                android:id="@+id/transactions_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/textview_round">

                <Spinner
                    android:id="@+id/cancelReasonsRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:background="@android:color/transparent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_arrow_down" />


            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/host_reason"
                android:textColor="@color/textcolorgray"
                android:textSize="12sp" />


            <RelativeLayout
                android:id="@+id/hostMessageLayout"
                android:layout_width="match_parent"
                android:layout_height="186dp"
                android:layout_marginTop="20dp">

                <RelativeLayout
                    android:id="@+id/hostDate"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:background="@drawable/textview_round">

                    <EditText
                        android:id="@+id/hostMessage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/white"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="top"
                        android:hint="@string/message_Host"
                        android:inputType="text|textMultiLine"
                        android:textColor="@color/textcolorgray" />

                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="6dp"
                    android:layout_weight="0.5"
                    android:background="@color/white"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/dialog_ok"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="6dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/btn_round"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:text="@string/continue_cancel_booking"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
