<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.BottomNavFragments.InventoryFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/inventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/inventory"
            android:textAlignment="viewStart"
            android:textColor="@color/color_gray"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/btn_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:scaleType="fitEnd"
            android:layout_gravity="center"
            android:gravity="end"/>
        <ImageView
            android:id="@+id/change_view_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_service_radio_enabled"
            android:layout_weight="1"
            android:visibility="gone"
            android:scaleType="fitEnd"
            android:layout_gravity="center"
            android:gravity="end"/>

    </LinearLayout>

    <FrameLayout
        android:layout_below="@id/inventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/textview_round">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sp_items"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:entries="@array/Inventoryhome"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@drawable/back" />
        <ImageView
            android:id="@+id/ccp_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginEnd="15dp"
            android:src="@drawable/arrow_down" />
    </FrameLayout>
    <LinearLayout
        android:id="@+id/layout_no_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        >

        <ImageView
            android:layout_width="129dp"
            android:layout_height="129dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:src="@drawable/inventoy_empty_state_img" />
        <TextView
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/no_item"
            android:textColor="@color/textcolordarkgray"
            android:textSize="15sp" />
        <TextView
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/no_item_text"
            android:textColor="@color/textcolorgray"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>
